# Banka-4-Backend

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  OWNERS  README.md  build.gradle.kts  docker-compose.yml  settings.gradle.kts
.prow/: bank-service.yml  build-images.yml  code-formatter.yml  stock-service.yml  user-service.yml
bank-service/: .dockerignore  build.gradle.kts
bank-service/src/main/resources/: application-dev.yml  application.properties
bank-service/src/test/resources/: application.yml
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: banka4.code-style-conventions.gradle.kts  banka4.migration-generator.gradle.kts  banka4.test-conventions.gradle.kts
common/: .dockerignore  build.gradle.kts  java-code-style.xml
docker/: Dockerfile-build-exchange-office  Dockerfile-build-java  Dockerfile-exchange-office  Dockerfile-java  README  build-prod-images.sh  exchange-config.py  gateway-nginx.conf  run-service.sh
exchange-office/: .gitignore  LICENSE  openapi.yaml  pyproject.toml
exchange-office/banka4_exchange/: __init__.py
exchange-office/instance/: .gitignore  config.py.example
exchange-office/tests/: conftest.py  test_all.py  test_exchange.json
notification-service/: build.gradle.kts
notification-service/src/main/resources/: application-dev.yml  application.properties
stock-service/: build.gradle.kts
stock-service/src/main/resources/: application-dev.yml  application-test.yml  application.properties  env.properties
testlib/: build.gradle.kts
user-service/: build.gradle.kts
(+1391 files in other folders)
